added dates to projects

--- a/projects.html
+++ b/projects.html
@@ -32,16 +32,19 @@
                 <img src="images/spikes.png">
                 <div class="item-title"><h3>Spikes</h3></div>
                 <div class="item-widget"><img src="images/python.png"></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item">
                 <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
                 <div class="item-widget"><img src="images/java.png"></div>
+                <div class="date">2023</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/snake.png">
                 <div class="item-title"><h3>Snake</h3></div>
                 <div class="item-widget"><img src="images/python.png"></div>
+                <div class="date">2022</div>
             </div>
         </div>
         <br>
@@ -54,42 +57,52 @@
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
+                <div class="date">2021</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/pyspikes.html')">
                 <img src="images/spikes.png">
                 <div class="item-title"><h3>Spikes</h3></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/dino.png">
                 <div class="item-title"><h3>Dino</h3></div>
+                <div class="date">2021</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/flappy.png">
                 <div class="item-title"><h3>Flappy Bird</h3></div>
+                <div class="date">2021</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/bubble.png">
                 <div class="item-title"><h3>Bubble Trouble</h3></div>
+                <div class="date">2021</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/minesweeper.png">
                 <div class="item-title"><h3>Mine Sweeper</h3></div>
+                <div class="date">2021</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/flow.png">
                 <div class="item-title"><h3>Flow</h3></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/2048.png">
                 <div class="item-title"><h3>2048</h3></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/snake.png">
                 <div class="item-title"><h3>Snake</h3></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/tetris.png">
                 <div class="item-title"><h3>Tetris</h3></div>
+                <div class="date">2022</div>
             </div>
         </div>
         <br>
@@ -102,11 +115,18 @@
             <div class="grid-item">
                 <img src="images/tasks.png">
                 <div class="item-title"><h3>To-Do List</h3></div>
+                <div class="date">2022</div>
             </div>
             <div class="grid-item">
                 <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
+                <div class="date">2023</div>
             </div>
+        </div>
+        <br>
+        <div class="section-title">
+            <h2>C++</h2> <br>
+            <img src="images/c++.png">
         </div>
         <br>
         <div class="section-title">
@@ -118,6 +138,7 @@
             <div class="grid-item" onclick="redirectToPage('projects/rrat.html')">
                 <img src="images/rat.png">
                 <div class="item-title"><h3>Rat Population</h3></div>
+                <div class="date">2023</div>
             </div>
         </div>
         <br>
@@ -130,10 +151,12 @@
             <div class="grid-item" onclick="redirectToPage('index.html')">
                 <img src="images/website.png">
                 <div class="item-title"><h3>Personal Website</h3></div>
+                <div class="date">2023</div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/text-to-html/editor.html')">
                 <img src="images/text-to-html.png">
                 <div class="item-title"><h3>Text To HTML</h3></div>
+                <div class="date">2023</div>
             </div>
         </div>
         <br>
