removed experience tab, removed phone, added LinkedIn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <div class="navbar">
             <a href="index.html">About</a>
             <a href="skills.html">Skills</a>
-            <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html" class="right">Contact</a>
         </div>
@@ -94,11 +93,11 @@
             <img src="images/gmail.png">
             <h3>jzepedapina@gmail.com</h3>
             <div style="width: 50px"></div>
-            <img src="images/phone.png">
-            <h3>(510) 984-8580</h3>
-            <div style="width: 75px"></div>
+            <img style="width: 55px" src="images/linkedin.png">
+            <h3><a href="https://linkedin.com/in/jaime-zepeda-pina-98a313292">LinkedIn</a></h3>
+            <div style="width: 50px"></div>
             <img src="images/instagram.png">
-            <h3>jaimezepeda08</h3>
+            <h3><a href="https://www.instagram.com/jaimezepeda08/">jaimezepeda08</a></h3>
         </div>
 
     </body>
