--- a/projects/pyspikes.html
+++ b/projects/pyspikes.html
@@ -19,7 +19,6 @@
         <div class="navbar">
             <a href="../index.html">About</a>
             <a href="../skills.html">Skills</a>
-            <a href="../experience.html">Experience</a>
             <a href="../projects.html">Projects</a>
             <a href="../contact.html" class="right">Contact</a>
         </div>
@@ -107,7 +106,7 @@
             <hr class="section-divider">
             <h3>AI</h3>
             <div class="tab">
-                <p>The algorithm used in this project is called <a href="../algorithms/neat.html">NEAT</a> (Neuroevolution of Augmenting Topologies)</p>
+                <p>The algorithm used in this project is called NEAT (Neuroevolution of Augmenting Topologies)</p>
                 <p>The following piece of code shows the parameters used to set up the neural network</p>
                 <div class="code-container">
                     <div class="code-chunk" id="config.txt">
