--- a/projects.html
+++ b/projects.html
@@ -121,11 +121,24 @@
                 <div class="item-title"><h3>Chess</h3></div>
                 <div class="date">2023</div>
             </div>
+            <div class="grid-item">
+                <img src="images/running.png">
+                <div class="item-title"><h3>Running Tracker</h3></div>
+                <div class="date">In Progress</div>
+            </div>
         </div>
         <br>
         <div class="section-title">
             <h2>C++</h2> <br>
             <img src="images/c++.png">
+        </div>
+        <br>
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="images/geometry.png">
+                <div class="item-title"><h3>Ray Tracer</h3></div>
+                <div class="date">In Progress</div>
+            </div>
         </div>
         <br>
         <div class="section-title">
